--- a/CoordTransform/CoordTransform/CoordTransform.csproj
+++ b/CoordTransform/CoordTransform/CoordTransform.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Projection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
